ParseSessionData: locate an installed file, not directory

Uninstalling a program such as KDevelop removes its installed files but
not directories. Consider the following scenario:
1) the user installs KDevelop into the prefix /usr/local;
2) the user uninstalls KDevelop;
3) the user installs KDevelop into the prefix /usr.

Assuming that /usr/local has a higher priority than /usr, locating the
directory "kdevclangsupport/wrappedQtHeaders" in ParseSessionData()
produces the path /usr/local/share/kdevclangsupport/wrappedQtHeaders.
The file
/usr/local/share/kdevclangsupport/wrappedQtHeaders/QtCore/qobjectdefs.h
was removed during the uninstallation step, so KDevelop cannot detect
signals and slots anymore.

Locate the file kdevclangsupport/wrappedQtHeaders/QtCore/qobjectdefs.h
instead and truncate last segments of its path to obtain the parent and
grandparent directory paths. The empty directories left over from
previous KDevelop installations into higher-priority locations are
ignored now.

A side effect of this commit is that now the path
kdevclangsupport/wrappedQtHeaders/QtCore is added before rather than
after the path kdevclangsupport/wrappedQtHeaders. This should be fine.

BUG: 499888
FIXED-IN: 6.3.250800